cmake_minimum_required(VERSION 2.8)

project(liuv_Code)

include_directories(${CMAKE_CURRENT_LIST_DIR}/libuv/include)

add_subdirectory(code/cgi)
add_subdirectory(code/detach)
add_subdirectory(code/dns)
add_subdirectory(code/helloworld)
add_subdirectory(code/idle-basic)
add_subdirectory(code/idle-compute)
add_subdirectory(code/interfaces)
add_subdirectory(code/locks)
add_subdirectory(code/multi-echo-server)
add_subdirectory(code/onchange)
add_subdirectory(code/pipe-echo-server)
add_subdirectory(code/plugin)
add_subdirectory(code/proc-streams)
add_subdirectory(code/progress)
add_subdirectory(code/queue-cancel)
add_subdirectory(code/queue-work)
add_subdirectory(code/ref-timer)
add_subdirectory(code/signal)
add_subdirectory(code/spawn)
add_subdirectory(code/tcp-echo-server)
add_subdirectory(code/thread-create)
add_subdirectory(code/tty)
add_subdirectory(code/tty-gravity)
add_subdirectory(code/udp-dhcp)
add_subdirectory(code/uvcat)
add_subdirectory(code/uvstop)
add_subdirectory(code/uvtee)
add_subdirectory(code/uvwget)

